fix (CI): change garbage collector in Docker container to hopefully provide better OS support